fazendo o mapeamento das exceções
