# service/src/main/java/br/com/sw2u/realmeet/config/ControllerExceptionHandler.java
@@ -1,10 +1,18 @@
 package br.com.sw2u.realmeet.config;
 
+import static br.com.sw2u.realmeet.util.ResponseEntityUtils.notFound;
+
 import br.com.sw2u.realmeet.api.model.ResponseError;
+import br.com.sw2u.realmeet.exception.InvalidRequestException;
 import br.com.sw2u.realmeet.exception.RoomNotFoundException;
+import br.com.sw2u.realmeet.util.ResponseEntityUtils;
+import java.util.List;
+import java.util.stream.Collectors;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.bind.annotation.ResponseBody;
+import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
 @RestControllerAdvice
@@ -12,24 +20,22 @@ public class ControllerExceptionHandler {
 
     @ExceptionHandler(RoomNotFoundException.class)
     public ResponseEntity<Object> handleNotFoundException(RoomNotFoundException ex) {
-        return buildResponseEntity(
-                HttpStatus.NOT_FOUND,
-                ex
-        );
+        return notFound();
     }
 
-    private ResponseEntity<Object> buildResponseEntity(
-            HttpStatus status,
-            Exception ex
-    ) {
 
-        return new ResponseEntity<>(
-                new ResponseError()
-                        .status(status.getReasonPhrase())
-                        .code(status.value())
-                        .message(ex.getMessage()),
-                status
-        );
+    @ExceptionHandler(InvalidRequestException.class)
+    @ResponseBody
+    @ResponseStatus(HttpStatus.UNPROCESSABLE_ENTITY)
+    public List<ResponseError> handleInvalidRequestException(InvalidRequestException exception) {
+        return exception
+                .getValidationErrors()
+                .stream()
+                .map(e -> new ResponseError()
+                        .field(e.getField())
+                        .errorCode(e.getErrorCode()))
+                .collect(Collectors.toList());
+
     }
 
 }
